# diesel-dualdb

./: .gitignore  Cargo.toml  DESIGN.md  README.md  docker-compose.yml
.angreal/: task_check.py  task_schema.py  task_test.py
.github/workflows/: ci.yml  release.yml
.metis/: code-index.md  config.toml  vision.md
.metis/adrs/: DDB-A-0001.md  DDB-A-0002.md
.metis/backlog/features/: DDB-T-0019.md
.metis/initiatives/DDB-I-0001/: initiative.md
.metis/initiatives/DDB-I-0001/tasks/: DDB-T-0001.md  DDB-T-0002.md  DDB-T-0003.md  DDB-T-0004.md  DDB-T-0005.md
.metis/initiatives/DDB-I-0002/: initiative.md
.metis/initiatives/DDB-I-0002/tasks/: DDB-T-0006.md  DDB-T-0007.md  DDB-T-0008.md  DDB-T-0009.md  DDB-T-0010.md
.metis/initiatives/DDB-I-0003/: initiative.md
.metis/initiatives/DDB-I-0003/tasks/: DDB-T-0011.md  DDB-T-0012.md  DDB-T-0013.md  DDB-T-0014.md
.metis/initiatives/DDB-I-0004/: initiative.md
.metis/initiatives/DDB-I-0004/tasks/: DDB-T-0020.md  DDB-T-0021.md  DDB-T-0022.md  DDB-T-0023.md
.metis/initiatives/DDB-I-0005/: initiative.md
.metis/initiatives/DDB-I-0005/tasks/: DDB-T-0015.md  DDB-T-0016.md  DDB-T-0017.md  DDB-T-0018.md
.metis/initiatives/DDB-I-0006/: initiative.md
.metis/initiatives/DDB-I-0006/tasks/: DDB-T-0024.md  DDB-T-0025.md  DDB-T-0026.md
.metis/initiatives/DDB-I-0007/: initiative.md
diesel-dualdb-cli/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
diesel-dualdb-cli/src/: lib.rs  main.rs
diesel-dualdb-macros/: Cargo.toml  README.md
diesel-dualdb-macros/src/: lib.rs
docs/: index.md
docs/explanation/: architecture.md  design-philosophy.md  schema-generation.md  timestamp-representation.md
docs/how-to/: add-a-portable-type.md  diverge-per-backend.md  generate-schema-and-migrations.md  pool-connections.md  test-on-both-backends.md
docs/reference/: features-and-msrv.md  macros.md  portable-types.md  schema-gen.md
docs/tutorials/: getting-started.md
schema/migrations/2026-01-01-000000_init/: up.sql
src/: backend.rs  escape.rs  lib.rs  pool.rs  sql_types.rs
src/types/: array.rs  bytes.rs  decimal.rs  json.rs  mod.rs  timestamp.rs  uuid.rs
tests/: array.rs  bytes.rs  connectivity.rs  decimal.rs  enum.rs  generated.rs  json.rs  pool.rs  timestamp.rs  upsert.rs  uuid.rs
